--- a/flow.dag.yaml
+++ b/flow.dag.yaml
@@ -26,7 +26,7 @@ nodes:
     type: code
     path: extract_query_from_question.jinja2
   inputs:
-    deployment_name: trondsgpt4
+    deployment_name: [your Azure OpenAI deployment name goes here]
     temperature: 0.7
     top_p: 1
     max_tokens: 256
@@ -37,7 +37,7 @@ nodes:
     chat_history: ${inputs.chat_history}
     question: ${inputs.question}
   provider: AzureOpenAI
-  connection: trondsOpenAIConnection
+  connection: [your Azure OpenAI connection name goes here]
   api: chat
   module: promptflow.tools.aoai
   use_variants: false
@@ -67,7 +67,7 @@ nodes:
     type: code
     path: augmented_chat.jinja2
   inputs:
-    deployment_name: trondsgpt4
+    deployment_name: [your Azure OpenAI deployment name goes here]
     temperature: 0.8
     top_p: 1
     response_format:
